objects/BMCServiceDesk__SelfService_Theme__c.object
<CustomObject>
    <description>This object holds the themes used in branding of Self Service</description>
    <fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Resource_File_Name__c</fullName>
        <label>Resource File Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfServiceVersion__c</fullName>
        <description>This field will be used to store Self Service Version of the theme.</description>
        <label>Self Service Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Theme_Data__c</fullName>
        <description>This field will be used to store color coding information for different SS components.</description>
        <label>Theme Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Theme_Description__c</fullName>
        <label>Theme Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Theme_Name__c</fullName>
        <label>Theme Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__URL_Tip_Text__c</fullName>
        <label>URL Tip Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Use_Default_Images__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Default Images</label>
        <type>Checkbox</type>
    </fields>
    <label>SelfService Theme</label>
    <nameField>
        <displayFormat>The-{0}</displayFormat>
        <label>Theme Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SelfService Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>